@@ -91,7 +91,10 @@ void rtt_update(struct rtt_info* rtt, int ms);
 /**
  * Update the statistics with a new timout expired observation.
  * @param rtt: round trip statistics structure.
+ * @param orig: original rtt time given for the query that timed out.
+ * 	Used to calculate the maximum responsible backed off time that
+ * 	can reasonably be applied.
  */
-void rtt_lost(struct rtt_info* rtt);
+void rtt_lost(struct rtt_info* rtt, int orig);
 
 #endif /* UTIL_RTT_H */
